--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.2.0"
 description = "Because tests should be easy to read"
 authors = ["Petereon <pvyboch1@gmail.com>"]
 license = "MIT"
+readme = 'README.md'
 
 [tool.poetry.dependencies]
 python = "^3.6"
