--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Because tests should be easy to read"
 authors = ["Petereon <pvyboch1@gmail.com>"]
 license = "MIT"
 repository = 'https://github.com/petereon/expycted'
-readme = 'README.md'
+readme = 'PYPIREADME.md'
 keywords = ['expect', 'expect-pattern', 'testing', 'test', 'matchers']
 classifiers = [
     'License :: OSI Approved :: MIT License',
