--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    if: "contains(github.event.head_commit.message, 'feat')"
+    if: "contains(github.event.head_commit.message, 'feat') || contains(github.event.head_commit.message, 'fix') || contains(github.event.head_commit.message, 'test')"
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
