--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,10 +15,12 @@ classifiers = [
     'Topic :: Software Development :: Libraries',
     'Typing :: Typed'
 ]
+packages = [
+    { include = "expycted", from = "src" },
+]
 [tool.poetry.dependencies]
 python = "^3.6"
 
-[tool.poetry.dev-dependencies]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
