--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -11,7 +11,11 @@ on:
 
 jobs:
   build:
-    if: "contains(github.event.head_commit.message, 'feat') || contains(github.event.head_commit.message, 'fix') || contains(github.event.head_commit.message, 'test')"
+    if: |
+      contains(github.event.head_commit.message, 'feat') || 
+      contains(github.event.head_commit.message, 'fix') || 
+      contains(github.event.head_commit.message, 'test') ||
+      contains((github.event.head_commit.message, 'refactor')
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
