--- a/Pipfile
+++ b/Pipfile
@@ -3,9 +3,11 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
 
-[packages]
+[dev-packages]
 pytest = "*"
 pytest-cov = "*"
+pytest-pspec = "*"
+pytest-clarity = "*"
 poetry = "*"
 
 [scripts]
