--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,5 +30,5 @@ build-backend = "poetry.core.masonry.api"
 python_files = ["*test*.py"]
 python_functions = ["test"]
 minversion = "6.0"
-addopts = "--cov=expycted --cov-report=term-missing"
+addopts = "--pspec --cov=expycted --cov-report=term-missing"
 testpaths = ["test"]
