--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macOS-latest]
-        python-version: ["3.6", "3.8", "3.10"]
+        python-version: ["3.8", "3.10"]
       fail-fast: false
     steps:
     - uses: actions/checkout@v2
