--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,11 +1,3 @@
-# This workflow will upload a Python Package using Twine when a release is created
-# For more information see: https://help.github.com/en/actions/language-and-framework-guides/using-python-with-github-actions#publishing-to-package-registries
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: Upload Python Package
 
 on:
@@ -14,29 +6,20 @@ on:
 
 jobs:
   deploy:
-
     runs-on: ubuntu-latest
-    
-
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4.3.1
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install pipenv
-        pipenv install --dev
-    - name: Build and install the library
-      run: |
-        pipenv run poetry build
-        pipenv run pip install ./dist/$(ls ./dist | grep .whl)
-    - name: Test with pytest
-      run: |
-        pipenv run pytest
-    - name: Publish package
-      uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
+    - name: Install Dependencies
+      run: python -m pip install ".[ci]"
+    - name: Run Tests
+      run: python -m pytest
+    - name: Build package
+      run: python -m build
+    - name: Publish Package
+      uses: pypa/gh-action-pypi-publish@v1.6.4
       with:
-        user: __token__
         password: ${{ secrets.PYPI_API_TOKEN }}
