--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,37 +1,71 @@
-[tool.poetry]
-name = "expycted"
-version = "0.8.2"
-description = "Because tests should be easy to read"
-authors = [
-    "Dov Benyomin Sohacheski",
-    "Petereon <pvyboch1@gmail.com>"
-]
-license = "MIT"
-repository = 'https://github.com/bdsoha/expycted'
-readme = 'PYPIREADME.md'
-keywords = ['expect', 'expect-pattern', 'testing', 'test', 'matchers']
-classifiers = [
-    'License :: OSI Approved :: MIT License',
-    'Programming Language :: Python :: 3',
-    'Natural Language :: English',
-    'Topic :: Software Development :: Testing',
-    'Topic :: Software Development :: Libraries',
-    'Typing :: Typed'
-]
-packages = [
-    { include = "expycted", from = "src" },
-]
-[tool.poetry.dependencies]
-python = "^3.6"
-
-
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["setuptools"]
+build-backend = "setuptools.build_meta"
+
+
+[project]
+name = "expycted"
+description = "Because tests should be easy to read"
+requires-python = ">=3.7"
+authors = [
+    { name = "Dov Benyomin Sohacheski", email = "support@expycted.com" },
+    { name = "Petereon", email = "pvyboch1@gmail.com" }
+]
+license = { text = "MIT" }
+keywords = [
+    "expect",
+    "expect-pattern",
+    "testing",
+    "test",
+    "matchers"
+]
+classifiers = [
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python",
+    "Natural Language :: English",
+    "Topic :: Software Development :: Testing",
+    "Topic :: Software Development :: Libraries",
+    "Typing :: Typed"
+]
+dynamic = ["version", "readme"]
+
+
+[project.urls]
+"Homepage" = "https://github.com/bdsoha/expycted"
+"Bug Tracker" = "https://github.com/bdsoha/expycted/issues"
+
+
+[project.optional-dependencies]
+dev = [
+    "pytest",
+    "pytest-cov",
+    "pytest-pspec",
+    "pytest-clarity",
+]
+ci = [
+    "build",
+    "expycted[dev]"
+]
+
+
+[tool.setuptools]
+package-dir = { "" = "src" }
+
+
+[tool.setuptools.dynamic]
+version = { attr = "expycted.__version__" }
+readme = { file = ["README.md"] }
+
 
 [tool.pytest.ini_options]
 python_files = ["*test*.py"]
 python_functions = ["test"]
 minversion = "6.0"
-addopts = "--pspec --cov=expycted --cov-report=term-missing"
+addopts = [
+    "--pspec",
+    "--cov=expycted",
+    "--cov-report=term-missing"
+]
 testpaths = ["test"]
