👷‍♂️ Added pre-commit and isort (#65)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,8 +22,14 @@ keywords = [
 classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
-    "Programming Language :: Python :: 3",
     "Programming Language :: Python",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.7",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
     "Natural Language :: English",
     "Topic :: Software Development :: Testing",
     "Topic :: Software Development :: Libraries",
@@ -35,15 +41,18 @@ dynamic = ["version", "readme"]
 [project.urls]
 "Homepage" = "https://github.com/bdsoha/expycted"
 "Bug Tracker" = "https://github.com/bdsoha/expycted/issues"
+"Source Code" = "https://github.com/bdsoha/expycted"
 
 
 [project.optional-dependencies]
 dev = [
+    "coverage[toml]",
+    "isort",
+    "pre-commit",
     "pytest",
     "pytest-cov",
-    "pytest-pspec",
     "pytest-clarity",
-    "coverage[toml]"
+    "tomli"
 ]
 ci = [
     "build",
@@ -62,17 +71,19 @@ readme = { file = ["README.md"] }
 
 [tool.pytest.ini_options]
 python_files = ["*test*.py"]
-python_functions = ["test"]
-minversion = "6.0"
 addopts = [
-    "--pspec",
     "--cov=expycted",
     "--cov-report=term-missing"
 ]
-testpaths = ["test"]
 
 
 [tool.coverage.report]
 exclude_lines  = [
     "@(abc\\.)?abstractmethod"
 ]
+
+
+[tool.isort]
+multi_line_output = 3
+src_paths = ["src", "test"]
+from_first = true
