--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -5,28 +5,50 @@ on:
     branches:
       - master
       - "v*-next"
+
   pull_request:
-    branches:
-     - master
-     - "v*-next"
+    types:
+      - opened
+      - synchronize
 
 jobs:
-  build:
-    runs-on: ${{ matrix.os }}
+  test:
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        os: [ubuntu-latest]
-        python-version: ["3.7", "3.8", "3.9", "3.10"]
-      fail-fast: true
+        python-version:
+        - "3.7"
+        - "3.8"
+        - "3.9"
+        - "3.10"
+        - "3.11"
+      fail-fast: false
+
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4.3.1
+
+    - name: Setup Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
+        cache: pip
+        cache-dependency-path: pyproject.toml
+
+    - uses: actions/cache@v3
+      id: cache
+      with:
+        path: ${{ env.pythonLocation }}
+        key: ${{ runner.os }}-python-${{ env.pythonLocation }}-${{ hashFiles('pyproject.toml') }}-test-v03
+
     - name: Install Dependencies
-      run: python -m pip install ".[ci]"
+      if: steps.cache.outputs.cache-hit != 'true'
+      run: python -m pip install .[ci]
+
+    - name: Lint
+      run: pre-commit run --all-files
+
     - name: Run Tests
       run: python -m pytest
+
     - name: Build Package
       run: python -m build
