--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Build and Test Python Package
+name: Test
 
 on:
   push:
@@ -38,7 +38,38 @@ jobs:
       id: cache
       with:
         path: ${{ env.pythonLocation }}
-        key: ${{ runner.os }}-python-${{ env.pythonLocation }}-${{ hashFiles('pyproject.toml') }}-test-v03
+        key: python-${{ env.pythonLocation }}-${{ hashFiles('pyproject.toml') }}
+
+    - name: Install Dependencies
+      if: steps.cache.outputs.cache-hit != 'true'
+      run: python -m pip install .[ci]
+
+    - name: Run Tests
+      run: python -m pytest
+
+    - name: Build Package
+      run: python -m build
+
+  static:
+    name: Static Checks
+    needs: test
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Setup Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.10
+        cache: pip
+        cache-dependency-path: pyproject.toml
+
+    - uses: actions/cache@v3
+      id: cache
+      with:
+        path: ${{ env.pythonLocation }}
+        key: python-${{ env.pythonLocation }}-${{ hashFiles('pyproject.toml') }}
 
     - name: Install Dependencies
       if: steps.cache.outputs.cache-hit != 'true'
@@ -46,9 +77,3 @@ jobs:
 
     - name: Lint
       run: pre-commit run --all-files
-
-    - name: Run Tests
-      run: python -m pytest
-
-    - name: Build Package
-      run: python -m build
