--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -62,5 +62,8 @@ jobs:
     - name: Install Dependencies
       run: python -m pip install .[ci]
 
-    - name: Lint
+    - name: Pre-Commit
       run: pre-commit run --all-files
+
+    - name: Ruff
+      run: ruff .
