--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ build-backend = "setuptools.build_meta"
 name = "expycted"
 description = "Because tests should be easy to read"
 requires-python = ">=3.7"
+dependencies = [
+    "wrapt==1.14.1"
+]
 authors = [
     { name = "Dov Benyomin Sohacheski", email = "support@expycted.com" },
     { name = "Petereon", email = "pvyboch1@gmail.com" }
@@ -46,17 +49,16 @@ dynamic = ["version", "readme"]
 
 [project.optional-dependencies]
 dev = [
-    "black",
+    "black>=22.12.0",
     "coverage[toml]",
-    "isort",
-    "mypy",
-    "pre-commit",
-    "pytest",
-    "pytest-cov",
-    "pytest-clarity",
-    "ruff",
-    "tomli",
-    "wrapt",
+    "isort>=5.10.1",
+    "mypy==0.991",
+    "pre-commit>=2.20.0",
+    "pytest>=7.2.0",
+    "pytest-cov>=4.0.0",
+    "pytest-clarity>=1.0.1",
+    "ruff==0.0.198",
+    "tomli>=2.0.1",
 ]
 ci = [
     "build",
