--- a/pyproject.toml
+++ b/pyproject.toml
@@ -85,7 +85,8 @@ addopts = [
 
 [tool.coverage.report]
 exclude_lines = [
-    "@(abc\\.)?abstractmethod"
+    "@(abc\\.)?abstractmethod",
+    "# pragma: no cover"
 ]
 
 
@@ -106,8 +107,20 @@ sections = [
 ]
 
 
+[tool.ruff]
+select = ["D"]
+ignore = [
+    "D100", # public module
+    "D101", # public class
+    "D105", # magic method
+    "D107", # init
+    "D202", # blank lines after function docstring,
+    "D203", # blank line required before class docstring
+]
+
 [tool.ruff.per-file-ignores]
 "test/helpers/stubs.py" = ["E731"]
+"test/*" = ["D"]
 
 
 [tool.mypy]
