--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -82,10 +82,10 @@ jobs:
         cache-dependency-path: pyproject.toml
 
     - name: ⏬ Install Dependencies
-      run: python -m pip install .[ci]
+      run: python -m pip install -e .[ci]
 
     - name: 💯 Coverage
-      run: python -m coverage run -m pytest
+      run: python -m pytest --cov=src --cov-report=xml
 
     - name: ⬆ Upload Results
       uses: paambaati/codeclimate-action@v3.2.0
